--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "gradient-descent/.template"]
 	path = gradient-descent/.template
 	url = https://github.com/muushi97/tex-project-template
+[submodule "lyapunov-stability-theory/.template"]
+	path = lyapunov-stability-theory/.template
+	url = https://github.com/muushi97/tex-project-template
