--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "riemann-integral/.template"]
 	path = riemann-integral/.template
 	url = https://github.com/muushi97/tex-project-template
+[submodule "simulated-annealing/.template"]
+	path = simulated-annealing/.template
+	url = https://github.com/muushi97/tex-project-template
