--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,6 @@
 [submodule "jordan-normal-form/.template"]
 	path = jordan-normal-form/.template
 	url = https://github.com/muushi97/tex-project-template
+[submodule "geometry/.template"]
+	path = geometry/.template
+	url = https://github.com/muushi97/tex-project-template
