create and initialize a project of Fisher-Yates shuffle

--- a/.gitmodules
+++ b/.gitmodules
@@ -76,3 +76,6 @@
 [submodule "bayesian-optimization/.template"]
 	path = bayesian-optimization/.template
 	url = https://github.com/muushi97/tex-project-template
+[submodule "fisher-yates-shuffle/.template"]
+	path = fisher-yates-shuffle/.template
+	url = https://github.com/muushi97/tex-project-template
