--- a/.gitmodules
+++ b/.gitmodules
@@ -82,3 +82,6 @@
 [submodule "todo/.template"]
 	path = todo/.template
 	url = https://github.com/muushi97/tex-project-template
+[submodule "mobius-function/.template"]
+	path = mobius-function/.template
+	url = https://github.com/muushi97/tex-project-template
